...
        android:layout_marginTop="75dp"
        android:text="Humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_range_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Set Ranges"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
...
